# spacegame

./: .gitignore  App.cpp  App.h  Background.cpp  Background.h  Block.cpp  Block.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionShape.cpp  CollisionShape.h  GameEntity.cpp  GameEntity.h  GameObject.cpp  GameObject.h  GameObjectGroup.cpp  GameObjectGroup.h  GameWorld.cpp  GameWorld.h  LICENSE  Map.cpp  Map.h  MapTexture.cpp  MapTexture.h  PlanetA18.sln  PlanetA18.vcxproj  PlanetA18.vcxproj.filters  Point.cpp  Point.h  README  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  ResourcesTMP.cpp  ResourcesTMP.h  SpaceGame.1  Texture.cpp  Texture.h  (+7 more)
CMakeModules/: FindSDL2.cmake  FindSDL2_image.cmake
Core/: AnimatedTexture.cpp  AnimatedTexture.h  Background.cpp  Background.h  Block.h  Camera.cpp  Camera.h  CollisionShape.cpp  CollisionShape.h  GameEntity.cpp  GameEntity.h  GameObject.cpp  GameObject.h  GameObjectGroup.cpp  GameObjectGroup.h  GameWorld.cpp  GameWorld.h  ITexture.h  Map.cpp  Map.h  MapTexture.cpp  MapTexture.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
Event/: CollisionEventArgs.cpp  CollisionEventArgs.h  CollisionEventHandler.cpp  CollisionEventHandler.h  EntityCollisionEventArgs.h  EntityCollisionEventHandler.h  Event.cpp  Event.h  EventArgs.cpp  EventArgs.h  EventHandler.cpp  EventHandler.h  MapCollisionEventArgs.h  MapCollisionEventHandler.cpp  MapCollisionEventHandler.h
Game/: App.cpp  App.h  AudioManager.cpp  AudioManager.h  BackgroundBehaviour.h  Bindings.h  BombBehaviour.cpp  BombBehaviour.h  ColliderLayers.h  CollisionEffects.cpp  CollisionEffects.h  DebugBehaviour.cpp  DebugBehaviour.h  EventHandlers.h  Game.cpp  Game.h  GameArea.cpp  GameArea.h  Health.cpp  Health.h  Inventory.cpp  Inventory.h  LimitedAgeBehaviour.cpp  LimitedAgeBehaviour.h  Missile.cpp  Missile.h  MissileBehaviour.cpp  MissileBehaviour.h  MusicManager.cpp  MusicManager.h  ParticleSystemComponents.h  PlayerController.cpp  PlayerController.h  Prefabs.cpp  PulseLightBehaviour.cpp  PulseLightBehaviour.h  SceneGameOver.cpp  SceneGameOver.h  SceneInGame.cpp  SceneInGame.h  (+24 more)
Game/Controller/: Controller.cpp  Controller.h  CpuController.cpp  CpuController.h  HumanController.cpp  HumanController.h
Game/Inventory/: Inventory.cpp  Inventory.h  Item.cpp  Item.h  Slot.cpp  Slot.h
Game/Object/: Bomb.cpp  Bomb.h  DynamicLightObject.cpp  DynamicLightObject.h  Explosion.cpp  Explosion.h  GameObjectBase.cpp  GameObjectBase.h  Light.cpp  Light.h  LightObject.cpp  LightObject.h  Missile.cpp  Missile.h  MyGameObject.cpp  MyGameObject.h  PulseLight.cpp  PulseLight.h  SpaceGameObject.cpp  SpaceGameObject.h  SpaceShip.cpp  SpaceShip.h  Spaceship.cpp  Spaceship.h  Team.cpp  Team.h  WalkingCreature.cpp  WalkingCreature.h
Game/SceneEndScreen/: SceneEndScreen.cpp  SceneEndScreen.h
Game/SceneGameOver/: SceneGameOver.h
Game/SceneInGame/: AmmoComponent.cpp  AmmoComponent.h  BackgroundBehaviour.cpp  BackgroundBehaviour.h  BombBehaviour.cpp  BombBehaviour.h  DebugBehaviour.cpp  DebugBehaviour.h  EnemyAIBase.cpp  EnemyAIBase.h  EnemySpawner.cpp  EnemySpawner.h  EnemyTargetingComponent.cpp  EnemyTargetingComponent.h  ExplosionBehaviour.cpp  ExplosionBehaviour.h  FireParticleManager.cpp  FireParticleManager.h  FlyingEnemyAI.cpp  FlyingEnemyAI.h  HUD.cpp  HUD.h  Health.cpp  Health.h  LimitedLifetimeBehaviour.cpp  LimitedLifetimeBehaviour.h  Pickup.cpp  Pickup.h  PickupSpawner.cpp  PickupSpawner.h  PlasmaExplosionBehaviour.cpp  PlasmaExplosionBehaviour.h  PlayerController.cpp  PlayerController.h  PlayerTargetingComponent.cpp  PlayerTargetingComponent.h  PopUpBehaviour.cpp  PopUpBehaviour.h  Power.cpp  Power.h  (+22 more)
Game/SceneQuickTesting/: QuickTestingBehaviour.cpp  QuickTestingBehaviour.h  SceneQuickTesting.cpp  SceneQuickTesting.h
Game/SceneTitleScreen/: MovingCameraBehaviour.cpp  MovingCameraBehaviour.h  SceneTitleScreen.cpp  SceneTitleScreen.h  TitleScreenController.cpp  TitleScreenController.h
Game/SceneVictory/: SceneVictory.cpp  SceneVictory.h
OSXBundle/: making_app_bundle.txt
PlanetA18.xcodeproj/: project.pbxproj
Primitives/: Point.cpp  Point.h  Rect.cpp  Rect.h  Rectangle.cpp  Rectangle.h  Vector.cpp  Vector.h
Route/: Node.cpp  Node.h  Route.cpp  Route.h  RouteGenerator.cpp  RouteGenerator.h  RouteRequest.cpp  RouteRequest.h  RouteResponse.cpp  RouteResponse.h
SpaceGame/: Missile.cpp  Missile.h  SpaceGame.cpp  SpaceGame.h  Spaceship.cpp  Spaceship.h
SpaceGame.xcodeproj/: project.pbxproj
Tile2D/: App.cpp  App.h
Tile2D/Animation/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedTexture.cpp  AnimatedTexture.h  Animation.cpp  Animation.h  AnimationBase.cpp  AnimationBase.h  AnimationManager.cpp  AnimationManager.h  IAnimation.h
Tile2D/Audio/: AudioClip.cpp  AudioSource.cpp  AudioSource.h  Mixer.cpp  Mixer.h  Music.cpp  Music.h
Tile2D/Canvas/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h
Tile2D/Core/: Background.cpp  Background.h  Block.cpp  Camera.cpp  CollisionShape.cpp  ComponentBase.h  Config.cpp  Config.h  GameEntity.h  GameObject.cpp  GameObject.h  IComponent.h  IScene.h  ISerializable.h  Input.cpp  Input.h  Map.cpp  Map.h  ObjectCreator.h  Prefab.cpp  Prefab.h  Reflector.cpp  Reflector.h  Renderer.cpp  Renderer.h  ResourceContainer.h  Resources.cpp  Resources.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h  Tile2D.cpp  Tile2D.h  Tile2DBehaviour.cpp  Tile2DBehaviour.h  Tile2DComponent.cpp  Tile2DComponent.h  Tile2DComponentReflector.h  Tile2DObject.cpp  (+7 more)
Tile2D/Event/: EntityCollisionEventArgs.cpp  EntityCollisionEventHandler.cpp  Event.h  EventArgs.cpp  EventHandler.cpp  EventHandler.h  MapCollisionEventArgs.cpp
Tile2D/GUI/: GuiComponentBase.cpp  GuiComponentBase.h  Window.cpp  Window.h
Tile2D/Graphics/: Camera.cpp  Camera.h  CoreRenderer.cpp  CoreRenderer.h
Tile2D/LightSystem/: LightSystem.cpp  LightSystem.h  PointLight.cpp  PointLight.h
Tile2D/PathFinding/: IPathValidator.cpp  IPathValidator.h  PathFinder.cpp  PathFinder.h  PathValidator.cpp  PathValidator.h
Tile2D/Physics/: Block.cpp  Block.h  (+34 more)
Windows/: SpaceGame.sln
res/: config.json  resources.json
(+339 files in other folders)
